--- a/About_the_park.html
+++ b/About_the_park.html
@@ -10,7 +10,7 @@
 <body>    
     <!--Nav Bar HTML Code. Using Unordered List Tags for the Links to other pages. Button Tags for 2 buttons present in the navigation bar of the website, which is the Sign In/ Sign Up and Buy Tickets Button.-->
     <nav class=“navbar”>
-        <a href=“index.html” class=“logo”>Infinity Park Logo</a>        
+        <a href="index.html" class=“logo”>Infinity Park Logo</a>        
         <ul class=“main-nav”>
             <li>
                 <a href=“#” class=“nav-links”>Things to Do</a>
@@ -239,7 +239,7 @@
 <!--Footer HTML Code. Using Divs to separate contents into logical structures which belong together. Sitemap Div for Web Page links, Contact Us Div for Contact Links such as Phone and Email and Social Media Links for the Social Media Buttons. These buttons will be added via FontAwesome using the commented out script in the head.-->
     <footer class = “footer”>
         <div class=“logo” id=“footerlogo”>
-            <a href=“index.html”>Infinity Park Logo</a>
+            <a href="index.html">Infinity Park Logo</a>
         </div>        <div class=“sitemaplinks”>
             <h3>Sitemap</h3>
             <ul class=“sitemap”>
