Home Page (Index Page Changes)
Added Highlights, Video and Main Buttons of the page.

Need to find new pictures that are square.

--- a/About_the_park.html
+++ b/About_the_park.html
@@ -131,7 +131,7 @@
         </div>
 
         <div class = "lbsShopDescription">
-            <p>Join Spiderman on an epic ride!<br> Spiderman Spiderman does whatever a spider can</p>
+            <p>Join Spiderman on an epic ride!<br> Spiderman! Spiderman! Does whatever a Spider Can!</p>
         </div>
 
         <div class = "lbsShopImage">
