Created Things to Do Page with the help of Pradyumn ,Jon and Can

--- a/About_the_park.html
+++ b/About_the_park.html
@@ -36,7 +36,7 @@
     <area shape="circle" coords="604, 69, 36" />
     <area shape="circle" coords="491, 237, 30" /> -->
     <div id = "lbsImageMap">
-        <img src="img/par.png" alt="Local Bookshops Map" width= "1440" height= "516" usemap="#localMap">
+        <img src="img/park.png" alt="Local Bookshops Map" width= "1440" height= "516" usemap="#localMap">
         <map name="localMap">
             <area class = "map1" shape="circle" coords="525,367,32" alt="Ironman Link" href="#Ironman">
             <area class = "map1" shape="circle" coords="774,358,37" alt="Hulk Link" href="#Hulk">
@@ -277,4 +277,5 @@
         </div>    
     </footer>
 </body>
+
 </html>
