--- a/Things_to_do.html
+++ b/Things_to_do.html
@@ -23,10 +23,10 @@
         <a href="index.html" class=“logo”>Infinity Park Logo</a>        
         <ul class=“main-nav”>
             <li>
-                <a href=“#” class=“nav-links”>Things to Do</a>
+                <a href="Things_to_do.html" class=“nav-links”>Things to Do</a>
             </li>            
             <li>
-                <a href=“#” class=“nav-links”>About Infinity Park</a>
+                <a href="About_the_park.html" class=“nav-links”>About Infinity Park</a>
             </li>            
             <li>
                 <button>Sign In/Sign Up</button>
@@ -124,7 +124,6 @@
                     <p>
                         Set off in an open-air vehicle for a guided tour of an African savanna—and spot live animals roaming free.
                     </p>
-                  </div>
             </figure>
             <figure>
                 <img src="img/Things-to-do-Safari-dinner.jpg" alt="Safari dinner Image" width= "400" height= "400"/>
@@ -167,11 +166,12 @@
             <h3>Sitemap</h3>
             <ul class=“sitemap”>
                 <li>
-                    <a href=“#”>Home</a>
+                    <a href="index.html">Home</a>
                 </li>                <li>
-                    <a href=“#”>Things to Do</a>
-                </li>                <li>
-                    <a href=“#”>About Infinity Park</a>
+                    <a href="Things_to_do.html">Things to Do</a>
+                </li>                
+                <li>
+                    <a href="About_the_park.html">About Infinity Park</a>
                 </li>
             </ul>
         </div>        
