--- a/About_the_park.html
+++ b/About_the_park.html
@@ -13,10 +13,10 @@
         <a href="index.html" class=“logo”>Infinity Park Logo</a>        
         <ul class=“main-nav”>
             <li>
-                <a href=“#” class=“nav-links”>Things to Do</a>
+                <a href="Things_to_do.html" class=“nav-links”>Things to Do</a>
             </li>            
             <li>
-                <a href=“#” class=“nav-links”>About Infinity Park</a>
+                <a href="About_the_park.html" class=“nav-links”>About Infinity Park</a>
             </li>            
             <li>
                 <button>Sign In/Sign Up</button>
@@ -244,11 +244,12 @@
             <h3>Sitemap</h3>
             <ul class=“sitemap”>
                 <li>
-                    <a href=“#”>Home</a>
+                    <a href="index.html">Home</a>
                 </li>                <li>
-                    <a href=“#”>Things to Do</a>
-                </li>                <li>
-                    <a href=“#”>About Infinity Park</a>
+                    <a href="Things_to_do.html">Things to Do</a>
+                </li>                
+                <li>
+                    <a href="About_the_park.html">About Infinity Park</a>
                 </li>
             </ul>
         </div>        
