Changing Quotation Marks
Fixing Quotation Marks.

--- a/Things_to_do.html
+++ b/Things_to_do.html
@@ -162,7 +162,8 @@
     <footer class = “footer”>
         <div class=“logo” id=“footerlogo”>
             <a href="index.html">Infinity Park Logo</a>
-        </div>        <div class=“sitemaplinks”>
+        </div>        
+        <div class=“sitemaplinks”>
             <h3>Sitemap</h3>
             <ul class=“sitemap”>
                 <li>
@@ -179,13 +180,13 @@
             <h3>Contact Us</h3>
             <ul class=“contactus”>
                 <li>
-                    <a href=“mailto:hello@infinitypark.com”>Email Us</a>
+                    <a href="mailto:hello@infinitypark.com">Email Us</a>
                 </li>                
                 <li>
-                    <a href=“#”>Contact Form</a>
+                    <a href="#">Contact Form</a>
                 </li>                
                 <li>
-                    <a href=“tel: +9048752338”>Phone</a>
+                    <a href="tel: +9048752338">Phone</a>
                 </li>
             </ul>
         </div>        
