--- a/About_the_park.html
+++ b/About_the_park.html
@@ -240,9 +240,10 @@
     <footer class = “footer”>
         <div class=“logo” id=“footerlogo”>
             <a href="index.html">Infinity Park Logo</a>
-        </div>        <div class=“sitemaplinks”>
+        </div>        
+        <div class=“sitemaplinks”>
             <h3>Sitemap</h3>
-            <ul class=“sitemap”>
+            <ul class="sitemap">
                 <li>
                     <a href="index.html">Home</a>
                 </li>                <li>
@@ -257,23 +258,23 @@
             <h3>Contact Us</h3>
             <ul class=“contactus”>
                 <li>
-                    <a href=“mailto:hello@infinitypark.com”>Email Us</a>
+                    <a href="mailto:hello@infinitypark.com">Email Us</a>
                 </li>                
                 <li>
                     <a href=“#”>Contact Form</a>
                 </li>                
                 <li>
-                    <a href=“tel: +9048752338”>Phone</a>
+                    <a href="tel: +9048752338">Phone</a>
                 </li>
             </ul>
         </div>        
         <div class=“socialmedialinks”>
             <h3>Follow Us on Social Media!</h3>
-            <ul class= “socialmedia”>
-                <a href=“#”>Facebook</a>
-                <a href=“#”>Youtube</a>
-                <a href=“#”>Instagram</a>
-                <a href=“#”>Twitter</a>
+            <ul class= "socialmedia">
+                <a href="#">Facebook</a>
+                <a href="#">Youtube</a>
+                <a href="#">Instagram</a>
+                <a href="#">Twitter</a>
             </ul>
         </div>    
     </footer>
