Cleaning up the image names and changed About the park description under the map.

--- a/About_the_park.html
+++ b/About_the_park.html
@@ -36,7 +36,7 @@
     <area shape="circle" coords="604, 69, 36" />
     <area shape="circle" coords="491, 237, 30" /> -->
     <div id = "lbsImageMap">
-        <img src="img/park.png" alt="Local Bookshops Map" width= "1440" height= "516" usemap="#localMap">
+        <img src="img/About-the-park-park.png" alt="Local Bookshops Map" width= "1440" height= "516" usemap="#localMap">
         <map name="localMap">
             <area class = "map1" shape="circle" coords="525,367,32" alt="Ironman Link" href="#Ironman">
             <area class = "map1" shape="circle" coords="774,358,37" alt="Hulk Link" href="#Hulk">
@@ -47,7 +47,7 @@
     </div>
 
     <div id = "lbsImageCaption">
-        <p>Map of local area showing local book shops.</p>
+        <p>Map of Infinity park.</p>
     </div>
 
     <div class = lbsShop>
@@ -61,7 +61,7 @@
         </div>
 
         <div class = "lbsShopImage">
-            <img src="img/ironman.jpg" alt="Ironman Logo" width= "200" height= "300">
+            <img src="img/About-the-park-Ride-1-ironman.jpg" alt="Ironman Logo" width= "200" height= "150">
         </div>
 
         <div class = "lbsShopOpeningTimes">
@@ -98,7 +98,7 @@
         </div>
 
         <div class = "lbsShopImage">
-            <img src="img/hulk.jpg" alt="Hulk Logo" width= "200" height= "100">
+            <img src="img/About-the-park-Ride-2-hulk.jpg" alt="Hulk Logo" width= "200" height= "100">
         </div>
 
         <div class = "lbsShopOpeningTimes">
@@ -135,7 +135,7 @@
         </div>
 
         <div class = "lbsShopImage">
-            <img src="img/spiderman.jpg" alt="Spiderman Logo" width= "200" height= "150">
+            <img src="img/About-the-park-Ride-3-spiderman.jpg" alt="Spiderman Logo" width= "200" height= "150">
         </div>
 
         <div class = "lbsShopOpeningTimes">
@@ -172,7 +172,7 @@
         </div>
 
         <div class = "lbsShopImage">
-            <img src="img/mexican.webp" alt="Mexican Restaurant Logo" width= "200" height= "200">
+            <img src="img/About-the-park-Restaurant-mexican.webp" alt="Mexican Restaurant Logo" width= "200" height= "200">
         </div>
 
         <div class = "lbsShopOpeningTimes">
@@ -210,7 +210,7 @@
         </div>
 
         <div class = "lbsShopImage">
-            <img src="img/italian.webp" alt="Italian Restaurant Logo" width= "200" height= "130">
+            <img src="img/About-the-park-Restaurant-italian.webp" alt="Italian Restaurant Logo" width= "200" height= "130">
         </div>
         
         <div class = "lbsShopOpeningTimes">
