Corrected spelling and changed the file name to use - instead of _

--- a/About-the-park.html
+++ b/About-the-park.html
@@ -13,10 +13,10 @@
         <a href="index.html" class=“logo”>Infinity Park Logo</a>        
         <ul class=“main-nav”>
             <li>
-                <a href="Things_to_do.html" class=“nav-links”>Things to Do</a>
+                <a href="Things-to-do.html" class=“nav-links”>Things to Do</a>
             </li>            
             <li>
-                <a href="About_the_park.html" class=“nav-links”>About Infinity Park</a>
+                <a href="About-the-park.html" class=“nav-links”>About Infinity Park</a>
             </li>            
             <li>
                 <button>Sign In/Sign Up</button>
@@ -247,10 +247,10 @@
                 <li>
                     <a href="index.html">Home</a>
                 </li>                <li>
-                    <a href="Things_to_do.html">Things to Do</a>
+                    <a href="Things-to-do.html">Things to Do</a>
                 </li>                
                 <li>
-                    <a href="About_the_park.html">About Infinity Park</a>
+                    <a href="About-the-park.html">About Infinity Park</a>
                 </li>
             </ul>
         </div>        
