--- a/Things-to-do.html
+++ b/Things-to-do.html
@@ -23,10 +23,10 @@
         <a href="index.html" class=“logo”>Infinity Park Logo</a>        
         <ul class=“main-nav”>
             <li>
-                <a href="Things_to_do.html" class=“nav-links”>Things to Do</a>
+                <a href="Things-to-do.html" class=“nav-links”>Things to Do</a>
             </li>            
             <li>
-                <a href="About_the_park.html" class=“nav-links”>About Infinity Park</a>
+                <a href="About-the-park.html" class=“nav-links”>About Infinity Park</a>
             </li>            
             <li>
                 <button>Sign In/Sign Up</button>
@@ -46,7 +46,7 @@
             <h2>All the Rides this park offers </h2>
 
             <figure>
-                <img src="img/Things-to-do-Ride-1-Battle of Ultron.jpg" alt="SpiderMan Ride Image" width= "400" height= "400">
+                <img src="img/Things-to-do-Ride-1-Battle-of-Ultron.jpg" alt="SpiderMan Ride Image" width= "400" height= "400">
                 <div class="top-right">
                     <h3>Avengers: Battle of Ultron</h3>
                     <p>
@@ -84,7 +84,7 @@
         </div>
 
         <div class="middle-grid">
-            <h2>All the exiting Events and Live Shows this park offers</h2>
+            <h2>All the exciting Events and exclusive Live Shows this park offers</h2>
             <figure>
                 <img src="img/Things-to-do-Live-Show..png" alt="Live Show Image" width= "400" height= "400">
                 <div class="middle-left">
@@ -169,10 +169,10 @@
                 <li>
                     <a href="index.html">Home</a>
                 </li>                <li>
-                    <a href="Things_to_do.html">Things to Do</a>
+                    <a href="Things-to-do.html">Things to Do</a>
                 </li>                
                 <li>
-                    <a href="About_the_park.html">About Infinity Park</a>
+                    <a href="About-the-park.html">About Infinity Park</a>
                 </li>
             </ul>
         </div>        
