Corrected Image names and formating for Things to do

--- a/Things-to-do.html
+++ b/Things-to-do.html
@@ -29,14 +29,11 @@
         </ul>        
     </nav>
 
-
-
-    <h1>All the Amazings Things you can do here </h1>
+    <h1>All the Amazing Things you can do here </h1>
     <div class="outer-grid">
 <!-- Below are the main three Rides offered -->
         <div class="top-grid">
             <h2>All the Rides this park offers </h2>
-
             <figure>
                 <img src="img/Things-to-do-Ride-1-Battle-of-Ultron.jpg" alt="SpiderMan Ride Image" width= "400" height= "400">
                 <div class="top-right">
@@ -45,8 +42,8 @@
                         Join forces with The Avengers at  Worlds of Adventure as they engage in a fierce struggle for survival against one of the planet’s most notorious enemies
                         Infinity Park brought the Marvel Universe to life with Avengers: Battle of Ultron, 
                         an exhilarating 4D dark ride where guests come face to face with the supervillain, Ultron. <br>
-                        Located in the Marvel Zone of Orlando Florida, the attraction seamlessly combines elaborate scenic, 
-                        special effects, and a stereoscopic 3D multimedia experience with a one-of-a-kind dark ride system.
+                        <em>Located in the Marvel Zone of Orlando Florida, the attraction seamlessly combines elaborate scenic, 
+                        special effects, and a stereoscopic 3D multimedia experience with a one-of-a-kind dark ride system.</em>
                     </p>
                   </div>
             </figure>  
@@ -77,7 +74,7 @@
         <div class="middle-grid">
             <h2>All the exciting Events and exclusive Live Shows this park offers</h2>
             <figure>
-                <img src="img/Things-to-do-Live-Show..png" alt="Live Show Image" width= "400" height= "400">
+                <img src="img/Things-to-do-Event-Live-Show.png" alt="Live Show Image" width= "400" height= "400">
                 <div class="middle-left">
                     <h3>Marvel Universe Live!</h3>
                     <p>See Marvel’s greatest Super Heroes unite against some of the most threatening villains in the Marvel Universe.</p>
