Bolding the Logo Tag

--- a/Things-to-do.html
+++ b/Things-to-do.html
@@ -20,7 +20,7 @@
 
 <!--Nav Bar HTML Code. Using Unordered List Tags for the Links to other pages. Button Tags for 2 buttons present in the navigation bar of the website, which is the Sign In/ Sign Up and Buy Tickets Button.-->
     <nav class=“navbar”>
-        <a href="index.html" class=“logo”>Infinity Park Logo</a>        
+        <a href="index.html" class="logo"><strong>Infinity Park Logo</strong></a>      
         <ul class=“main-nav”>
             <li>
                 <a href="Things-to-do.html" class=“nav-links”>Things to Do</a>
