Added About the park Comments and Extra tags

--- a/About_the_park.html
+++ b/About_the_park.html
@@ -30,11 +30,9 @@
 
 
 
-<!--<area shape="circle" coords="525, 367, 32" />
-    <area shape="circle" coords="774, 358, 37" />
-    <area shape="circle" coords="647, 288, 43" />
-    <area shape="circle" coords="604, 69, 36" />
-    <area shape="circle" coords="491, 237, 30" /> -->
+<!-- Map links code. Using area class to map circles and href to link to approprate section of the pages and alt to allow for better
+    accessibility and img tages to include an image of the park layout
+This section was completed by team member Abish and Jonathan -->
     <div id = "lbsImageMap">
         <img src="img/About-the-park-park.png" alt="Local Bookshops Map" width= "1440" height= "516" usemap="#localMap">
         <map name="localMap">
@@ -50,6 +48,11 @@
         <p>Map of Infinity park.</p>
     </div>
 
+    <!--  
+        Ironman ride Div class. Img tags to include picture of ride, paragraph tag to include description. br tag to add a break so that it
+        is more easily read and bold tags to highlight the important text and a table list to show opening and closing times
+        Completed By Abish and Jonathan   -->
+
     <div class = lbsShop>
         <a id="Ironman"></a>
         <div class = "lbsShopTitle">
@@ -57,7 +60,7 @@
         </div>
 
         <div class = "lbsShopDescription">
-            <p>Join IronMan on his adventures!.<br> As he battles the forces of the antagonist of the film he is currently in.</p>
+            <p><b>Join IronMan on his adventures!.</b><br> As he battles the forces of the antagonist of the film he is currently in.</p>
         </div>
 
         <div class = "lbsShopImage">
@@ -76,15 +79,10 @@
                 <tr><th>Sunday</th><td>10am - 10pm</td></tr>
             </table>
         </div>
-<!--  
-        <div class = "lbsShopContactName">
-            <p>Daria Austin</p>
-        </div>
-
-        <div class = "lbsShopAddress">
-            <address>Southbank Centre, Belvedere Rd, London</address>
-        </div>
-        -->
+    <!--  
+        Hulk ride Div class. Img tags to include picture of ride, paragraph tag to include description. br tag to add a break so that it
+        is more easily read and bold tags to highlight the important text and a table list to show opening and closing times
+        Completed By Abish and Jonathan   -->
     </div>
 
     <div class = lbsShop>
@@ -94,7 +92,7 @@
         </div>
 
         <div class = "lbsShopDescription">
-            <p>Join Hulk on an epic ride!<br> As he goes through his incredible journey of self discovery and no smashing at all.</p>
+            <p><b>Join Hulk on an epic ride!</b><br> As he goes through his incredible journey of self discovery and no smashing at all.</p>
         </div>
 
         <div class = "lbsShopImage">
@@ -113,15 +111,10 @@
                 <tr><th>Sunday</th><td>11:30am - 5:30pm</td></tr>
             </table>
         </div>
-<!--  
-        <div class = "lbsShopContactName">
-            <p>Jill Hood</p>
-        </div>
-
-        <div class = "lbsShopAddress">
-            <address>Greenwich Church St, London</address>
-        </div>
-        -->
+    <!--  
+        Spiderman ride Div class. Img tags to include picture of ride, paragraph tag to include description. br tag to add a break so that it
+        is more easily read and bold tags to highlight the important text and a table list to show opening and closing times
+        Completed by Abish and Jonathan  -->
     </div>
 
     <div class = lbsShop>
@@ -131,7 +124,7 @@
         </div>
 
         <div class = "lbsShopDescription">
-            <p>Join Spiderman on an epic ride!<br> Spiderman! Spiderman! Does whatever a Spider Can!</p>
+            <p><b>Join Spiderman on an epic ride!</b><br> Spiderman! Spiderman! Does whatever a Spider Can!</p>
         </div>
 
         <div class = "lbsShopImage">
@@ -150,15 +143,10 @@
                 <tr><th>Sunday</th><td>11:30am - 5:30pm</td></tr>
             </table>
         </div>
-        <!--  
-        <div class = "lbsShopContactName">
-            <p>Jill Hood</p>
-        </div>
-
-        <div class = "lbsShopAddress">
-            <address>Greenwich Church St, London</address>
-        </div>
-        -->
+    <!--  
+        Restaurant Div class. Img tags to include picture, paragraph tag to include description. br tag to add a break so that it
+        is more easily read and bold tags to highlight the important text and a table list to show opening and closing times
+        Completed by Abish and Jonathan  -->
     </div>
 
     <div class = lbsShop>
@@ -168,7 +156,7 @@
         </div>
 
         <div class = "lbsShopDescription">
-            <p>Its a mexican restaurant.<br> Food but its mexican</p>
+            <p><b>Its a mexican restaurant.</b><br> Food but its mexican</p>
         </div>
 
         <div class = "lbsShopImage">
@@ -187,16 +175,10 @@
                 <tr><th>Sunday</th><td>12am - 5pm</td></tr>
             </table>
         </div>
-        <!--  
-
-        <div class = "lbsShopContactName">
-            <p>Cordelia Traynor</p>
-        </div>
-
-        <div class = "lbsShopAddress">
-            <address>Bloomsbury St, Bloomsbury, London</address>
-        </div>
-        -->
+    <!--  
+        Restaurant Div class. Img tags to include picture, paragraph tag to include description. br tag to add a break so that it
+        is more easily read and bold tags to highlight the important text and a table list to show opening and closing times
+        Completed By Abish and Jonathan   -->
     </div>
 
     <div class = lbsShop>
@@ -206,7 +188,7 @@
         </div>
 
         <div class = "lbsShopDescription">
-            <p>Its an Italian Restaurant<br> pizza</p>
+            <p><b>Its an Italian Restaurant</b><br> pizza</p>
         </div>
 
         <div class = "lbsShopImage">
@@ -225,15 +207,7 @@
                 <tr><th>Sunday</th><td>10am - 5pm</td></tr>
             </table>
         </div>
-        <!--  
-        <div class = "lbsShopContactName">
-            <p>Winter Galvan</p>
-        </div>
         
-        <div class = "lbsShopAddress">
-            <address>New Cross, London</address>
-        </div>
-        -->
     </div>
 
 <!--Footer HTML Code. Using Divs to separate contents into logical structures which belong together. Sitemap Div for Web Page links, Contact Us Div for Contact Links such as Phone and Email and Social Media Links for the Social Media Buttons. These buttons will be added via FontAwesome using the commented out script in the head.-->
