--- a/Things_to_do.html
+++ b/Things_to_do.html
@@ -46,7 +46,7 @@
             <h2>All the Rides this park offers </h2>
 
             <figure>
-                <img src="img/Things-to-do-Ride-1-Battle of Ultron.jpg" alt="SpiderMan Ride Image" width= "400" height= "400">
+                <img src="img/Things-to-do-Ride-1-Battle-of-Ultron.jpg" alt="SpiderMan Ride Image" width= "400" height= "400">
                 <div class="top-right">
                     <h3>Avengers: Battle of Ultron</h3>
                     <p>
