Added the correct names for the div tags in About the park .Added more description on the comments for Things to do

--- a/About-the-park.html
+++ b/About-the-park.html
@@ -33,9 +33,9 @@
 <!-- Map links code. Using area class to map circles and href to link to approprate section of the pages and alt to allow for better
     accessibility and img tages to include an image of the park layout
 This section was completed by team member Abish and Jonathan -->
-    <div id = "lbsImageMap">
+    <div id = "InfinityImageMap">
         <img src="img/About-the-park-park.png" alt="Local Bookshops Map" width= "1440" height= "516" usemap="#localMap">
-        <map name="localMap">
+        <map name="InfinityParkMap">
             <area class = "map1" shape="circle" coords="525,367,32" alt="Ironman Link" href="#Ironman">
             <area class = "map1" shape="circle" coords="774,358,37" alt="Hulk Link" href="#Hulk">
             <area class = "map1" shape="circle" coords="647,288,43" alt="Spiderman Link" href="#Spiderman">
@@ -44,7 +44,7 @@ This section was completed by team member Abish and Jonathan -->
         </map>
     </div>
 
-    <div id = "lbsImageCaption">
+    <div id = "InfinityCaption">
         <p>Map of Infinity park.</p>
     </div>
 
@@ -53,21 +53,21 @@ This section was completed by team member Abish and Jonathan -->
         is more easily read and bold tags to highlight the important text and a table list to show opening and closing times
         Completed By Abish and Jonathan   -->
 
-    <div class = lbsShop>
+    <div class =RideIronMan>
         <a id="Ironman"></a>
-        <div class = "lbsShopTitle">
+        <div class = "RideIronManTitle">
             <h2>IronMan Ride</h2>
         </div>
 
-        <div class = "lbsShopDescription">
+        <div class = "RideIronManDescription">
             <p><b>Join IronMan on his adventures!.</b><br> As he battles the forces of the antagonist of the film he is currently in.</p>
         </div>
 
-        <div class = "lbsShopImage">
+        <div class = "RideIronManImage">
             <img src="img/About-the-park-Ride-1-ironman.jpg" alt="Ironman Logo" width= "200" height= "150">
         </div>
 
-        <div class = "lbsShopOpeningTimes">
+        <div class = "RideIronManOpeningTimes">
             <p>Opening times:</p>
             <table>
                 <tr><th>Monday</th><td>Closed</td></tr>
@@ -85,21 +85,21 @@ This section was completed by team member Abish and Jonathan -->
         Completed By Abish and Jonathan   -->
     </div>
 
-    <div class = lbsShop>
+    <div class = RideHulk>
         <a id="Hulk"></a>
-        <div class = "lbsShopTitle">
+        <div class = "RideHulkTitle">
             <h2>Hulk ride</h2>
         </div>
 
-        <div class = "lbsShopDescription">
+        <div class = "RideHulkDescription">
             <p><b>Join Hulk on an epic ride!</b><br> As he goes through his incredible journey of self discovery and no smashing at all.</p>
         </div>
 
-        <div class = "lbsShopImage">
+        <div class = "RideHulkImage">
             <img src="img/About-the-park-Ride-2-hulk.jpg" alt="Hulk Logo" width= "200" height= "100">
         </div>
 
-        <div class = "lbsShopOpeningTimes">
+        <div class = "RideHulkOpeningTimes">
             <p>Opening times:</p>
             <table>
                 <tr><th>Monday</th><td>Closed</td></tr>
@@ -117,21 +117,21 @@ This section was completed by team member Abish and Jonathan -->
         Completed by Abish and Jonathan  -->
     </div>
 
-    <div class = lbsShop>
+    <div class = RideSpiderman>
         <a id="Spiderman"></a>
-        <div class = "lbsShopTitle">
+        <div class = "RideSpidermanTitle">
             <h2>SpiderMan ride</h2>
         </div>
 
-        <div class = "lbsShopDescription">
+        <div class = "RideSpidermanDescription">
             <p><b>Join Spiderman on an epic ride!</b><br> Spiderman! Spiderman! Does whatever a Spider Can!</p>
         </div>
 
-        <div class = "lbsShopImage">
+        <div class = "RideSpidermanImage">
             <img src="img/About-the-park-Ride-3-spiderman.jpg" alt="Spiderman Logo" width= "200" height= "150">
         </div>
 
-        <div class = "lbsShopOpeningTimes">
+        <div class = "RideSpidermanOpeningTimes">
             <p>Opening times:</p>
             <table>
                 <tr><th>Monday</th><td>Closed</td></tr>
@@ -149,21 +149,21 @@ This section was completed by team member Abish and Jonathan -->
         Completed by Abish and Jonathan  -->
     </div>
 
-    <div class = lbsShop>
+    <div class = MexicanRestaurantShop>
         <a id="MexicanRestaurant"></a>
-        <div class = "lbsShopTitle">
+        <div class = "MexicanRestaurantTitle">
             <h2>Mexican Restaurant</h2>
         </div>
 
-        <div class = "lbsShopDescription">
+        <div class = "MexicanRestaurantDescription">
             <p><b>Its a mexican restaurant.</b><br> Food but its mexican</p>
         </div>
 
-        <div class = "lbsShopImage">
+        <div class = "MexicanRestaurantImage">
             <img src="img/About-the-park-Restaurant-mexican.webp" alt="Mexican Restaurant Logo" width= "200" height= "200">
         </div>
 
-        <div class = "lbsShopOpeningTimes">
+        <div class = "MexicanRestaurantOpeningTimes">
             <p>Opening times:</p>
             <table>
                 <tr><th>Monday</th><td>Closed</td></tr>
@@ -181,21 +181,21 @@ This section was completed by team member Abish and Jonathan -->
         Completed By Abish and Jonathan   -->
     </div>
 
-    <div class = lbsShop>
+    <div class = ItalianRestaurantShop>
         <a id="ItalianRestaurant"></a>
-        <div class = "lbsShopTitle">
+        <div class = "ItalianRestaurantShopTitle">
             <h2>Italian Restaurant</h2>
         </div>
 
-        <div class = "lbsShopDescription">
+        <div class = "ItalianRestaurantShopDescription">
             <p><b>Its an Italian Restaurant</b><br> pizza</p>
         </div>
 
-        <div class = "lbsShopImage">
+        <div class = "ItalianRestaurantShopImage">
             <img src="img/About-the-park-Restaurant-italian.webp" alt="Italian Restaurant Logo" width= "200" height= "130">
         </div>
         
-        <div class = "lbsShopOpeningTimes">
+        <div class = "ItalianRestaurantShopOpeningTimes">
             <p>Opening times:</p>
             <table>
                 <tr><th>Monday</th><td>Closed</td></tr>
