--- a/Things-to-do.html
+++ b/Things-to-do.html
@@ -7,7 +7,11 @@
 <!--    <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>-->
     <title>Infinity Park</title>
 </head>
-<!-- all the below code is contributed by Abish,Pietro,Jon,Can and Pradhyumnaa -->
+<!-- The ordering of the Things to Do Page is designed according to each division's importance 
+        1)the Navigation Bar at top, similar to all pages
+        2)Three most important Things this park offers is Rides,Shows and Safari .Picture and a short description is provided for the audience  on each aspect 
+        3)Footer
+    all the below code is contributed by Abish,Pietro,Jon,Can and Pradhyumnaa -->
 <!-- Body starts here -->
 <body>
 <!--Nav Bar HTML Code. Using Unordered List Tags for the Links to other pages. Button Tags for 2 buttons present in the navigation bar of the website, which is the Sign In/ Sign Up and Buy Tickets Button.-->
