Capitalization Fix in About the Park

--- a/About-the-park.html
+++ b/About-the-park.html
@@ -156,7 +156,7 @@ This section was completed by team member Abish and Jonathan -->
         </div>
 
         <div class = "MexicanRestaurantDescription">
-            <p><b>Its a mexican restaurant.</b><br> Food but its mexican</p>
+            <p><b>Its a mexican restaurant.</b><br> Food but its Mexican</p>
         </div>
 
         <div class = "MexicanRestaurantImage">
@@ -188,7 +188,7 @@ This section was completed by team member Abish and Jonathan -->
         </div>
 
         <div class = "ItalianRestaurantShopDescription">
-            <p><b>Its an Italian Restaurant</b><br> pizza</p>
+            <p><b>Its an Italian Restaurant</b><br> Pizza</p>
         </div>
 
         <div class = "ItalianRestaurantShopImage">
