--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         
         <div id="mainbutton3">
             <div class = "buttonpic">
-                <a href="Things-to-do.html"><img src="img/About-the-park-Ride-1-ironman.jpg" alt="Iron Man Ride Picture" width= "250" height= "250"></a>
+                <a href="About-the-park.html"><img src="img/About-the-park-Ride-1-ironman.jpg" alt="Iron Man Ride Picture" width= "250" height= "250"></a>
             </div>
         </div>
     </div>
