fixed the issue with map not linking places

--- a/About-the-park.html
+++ b/About-the-park.html
@@ -34,7 +34,7 @@
     accessibility and img tages to include an image of the park layout
 This section was completed by team member Abish and Jonathan -->
     <div id = "InfinityImageMap">
-        <img src="img/About-the-park-park.png" alt="Local Bookshops Map" width= "1440" height= "516" usemap="#localMap">
+        <img src="img/About-the-park-park.png" alt="Infinity Park Map" width= "1440" height= "516" usemap="#InfinityParkMap">
         <map name="InfinityParkMap">
             <area class = "map1" shape="circle" coords="525,367,32" alt="Ironman Link" href="#Ironman">
             <area class = "map1" shape="circle" coords="774,358,37" alt="Hulk Link" href="#Hulk">
