--- a/About-the-park.html
+++ b/About-the-park.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/stylesheet.css">
 <!--    <script src=“https://kit.fontawesome.com/b99e675b6e.js”></script>-->
     <title>Infinity Park</title>
 </head>
-<body>    
+
+    <body>    
     <!--Nav Bar HTML Code. Using Unordered List Tags for the Links to other pages. Button Tags for 2 buttons present in the navigation bar of the website, which is the Sign In/ Sign Up and Buy Tickets Button.-->
     <nav class=“navbar”>
         <a href="index.html" class="logo"><strong>Infinity Park Logo</strong></a>      
