--- a/Things-to-do.html
+++ b/Things-to-do.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/stylesheet.css">
 <!--    <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>-->
     <title>Infinity Park</title>
 </head>
