About the Park background
using https://wallpaperaccess.com/full/4065699.jpg

--- a/About-the-park.html
+++ b/About-the-park.html
@@ -9,7 +9,10 @@
     <title>Infinity Park</title>
 </head>
 
-    <body>    
+    <body>  
+    <div class="about-the-park-body-wrap">
+            
+    <div class="about-the-park-body-content">   
     <!--Nav Bar HTML Code. Using Unordered List Tags for the Links to other pages. Button Tags for 2 buttons present in the navigation bar of the website, which is the Sign In/ Sign Up and Buy Tickets Button.-->
     <nav class=“navbar”>
         <a href="index.html" class="logo"><strong>Infinity Park Logo</strong></a>      
@@ -254,6 +257,8 @@ This section was completed by team member Abish and Jonathan -->
             </ul>
         </div>    
     </footer>
+    </div>
+    </div>
 </body>
 
 </html>
