added background image css for things-to-do html

--- a/Things-to-do.html
+++ b/Things-to-do.html
@@ -16,23 +16,27 @@
 <!-- Body starts here -->
 <body>
 <!--Nav Bar HTML Code. Using Unordered List Tags for the Links to other pages. Button Tags for 2 buttons present in the navigation bar of the website, which is the Sign In/ Sign Up and Buy Tickets Button.-->
-    <nav class=“navbar”>
-        <a href="index.html" class="logo"><strong>Infinity Park Logo</strong></a>      
-        <ul class=“main-nav”>
-            <li>
-                <a href="Things-to-do.html" class=“nav-links”>Things to Do</a>
-            </li>            
-            <li>
-                <a href="About-the-park.html" class=“nav-links”>About Infinity Park</a>
-            </li>            
-            <li>
-                <button>Sign In/Sign Up</button>
-            </li>            
-            <li>
-                <button>Buy Tickets</button>
-            </li>            
-        </ul>        
-    </nav>
+    <div class="things-to-do-body-wrap">
+            
+        <div class="things-to-do-body-content">      
+            
+            <nav class=“navbar”>
+                <a href="index.html" class="logo"><strong>Infinity Park Logo</strong></a>      
+                <ul class=“main-nav”>
+                    <li>
+                        <a href="Things-to-do.html" class=“nav-links”>Things to Do</a>
+                    </li>            
+                    <li>
+                        <a href="About-the-park.html" class=“nav-links”>About Infinity Park</a>
+                    </li>            
+                    <li>
+                        <button>Sign In/Sign Up</button>
+                    </li>            
+                    <li>
+                        <button>Buy Tickets</button>
+                    </li>            
+                </ul>        
+            </nav>
 
     <h1>All the Amazing Things you can do here </h1>
     <div class="outer-grid">
@@ -186,6 +190,8 @@
             </ul>
         </div>    
     </footer>
+    </div>
+        </div>
 </body>
 <!-- Body ends here -->
 </html>
