added the header css with logo for all the three pages

--- a/Things-to-do.html
+++ b/Things-to-do.html
@@ -15,34 +15,27 @@
     all the below code is contributed by Abish,Pietro,Jon,Can and Pradhyumnaa -->
 <!-- Body starts here -->
 <body>
-<!--Nav Bar HTML Code. Using Unordered List Tags for the Links to other pages. Button Tags for 2 buttons present in the navigation bar of the website, which is the Sign In/ Sign Up and Buy Tickets Button.-->
+
     <div class="things-to-do-body-wrap">
             
         <div class="things-to-do-body-content">      
-            
-            <nav class=“navbar”>
-                <a href="index.html" class="logo"><strong>Infinity Park Logo</strong></a>      
-                <ul class=“main-nav”>
-                    <li>
-                        <a href="Things-to-do.html" class=“nav-links”>Things to Do</a>
-                    </li>            
-                    <li>
-                        <a href="About-the-park.html" class=“nav-links”>About Infinity Park</a>
-                    </li>            
-                    <li>
-                        <button>Sign In/Sign Up</button>
-                    </li>            
-                    <li>
-                        <button>Buy Tickets</button>
-                    </li>            
-                </ul>        
-            </nav>
+<!--Nav Bar HTML Code. Using Unordered List Tags for the Links to other pages. Button Tags for 2 buttons present in the navigation bar of the website, which is the Sign In/ Sign Up and Buy Tickets Button.-->            
+            <ul class = "navbar">
+                <li class = "nav-item-logo"><a href="index.html" ><img src="img/logo.jpg" width = " 150" height = "50" ></a></li>
+                <li class = "nav-item-page-link"> <a href="Things-to-do.html" class="navlinks">Things to Do</a></li>
+                <li class = "nav-item-page-link"><a href="About-the-park.html" class="nav-links">About Infinity Park</a></li>
+                <li class = "nav-item-page-button"><button>Buy Tickets</button></li>
+                <li class = "nav-item-page-button"><button>Sign In/Sign Up</button></li>
+              </ul>
 
+ <div style="padding:20px;margin-top:30px">
     <h1>All the Amazing Things you can do here </h1>
+
+
     <div class="outer-grid">
 <!-- Below are the main three Rides offered -->
         <div class="top-grid">
-            <h2>All the Rides this park offers </h2>
+            <h2>Checkout all the Fantastic Rides this park offers </h2>
             <figure>
                 <img src="img/Things-to-do-Ride-1-Battle-of-Ultron.jpg" alt="SpiderMan Ride Image" width= "400" height= "400">
                 <div class="top-right">
@@ -192,6 +185,7 @@
     </footer>
     </div>
         </div>
+    </div>
 </body>
 <!-- Body ends here -->
 </html>
