--- a/About-the-park.html
+++ b/About-the-park.html
@@ -14,25 +14,15 @@
             
     <div class="about-the-park-body-content">   
     <!--Nav Bar HTML Code. Using Unordered List Tags for the Links to other pages. Button Tags for 2 buttons present in the navigation bar of the website, which is the Sign In/ Sign Up and Buy Tickets Button.-->
-    <nav class=“navbar”>
-        <a href="index.html" class="logo"><strong>Infinity Park Logo</strong></a>      
-        <ul class=“main-nav”>
-            <li>
-                <a href="Things-to-do.html" class=“nav-links”>Things to Do</a>
-            </li>            
-            <li>
-                <a href="About-the-park.html" class=“nav-links”>About Infinity Park</a>
-            </li>            
-            <li>
-                <button>Sign In/Sign Up</button>
-            </li>            
-            <li>
-                <button>Buy Tickets</button>
-            </li>            
-        </ul>        
-    </nav>
+    <ul class = "navbar">
+        <li class = "nav-item-logo"><a href="index.html" ><img src="img/logo.jpg" width = " 150" height = "50" ></a></li>
+        <li class = "nav-item-page-link"> <a href="Things-to-do.html" class="navlinks">Things to Do</a></li>
+        <li class = "nav-item-page-link"><a href="About-the-park.html" class="nav-links">About Infinity Park</a></li>
+        <li class = "nav-item-page-button"><button>Buy Tickets</button></li>
+        <li class = "nav-item-page-button"><button>Sign In/Sign Up</button></li>
+    </ul>
 
-
+<div style="padding:20px;margin-top:60px">
 
 
 <!-- Map links code. Using area class to map circles and href to link to approprate section of the pages and alt to allow for better
@@ -259,6 +249,7 @@ This section was completed by team member Abish and Jonathan -->
     </footer>
     </div>
     </div>
+</div>
 </body>
 
 </html>
